# XMPP-Remote-Media-Extension

./: CMakeLists.txt
c++/: CMakeLists.txt
c++/libxrme/: CMakeLists.txt  connection.cpp  mediaplayerhandler.cpp  remotecontrolhandler.cpp
c++/test/: CMakeLists.txt  clientmainwindow.cpp  clientmainwindow.h  server.cpp
java-android/src/com/purplehatstands/libxrme/: AlbumArt.java  Common.java  Connection.java  Handler.java  MediaPlayerHandler.java  MediaPlayerInterface.java  MediaStorageHandler.java  MediaStorageInterface.java  Metadata.java  PeerDiscoveryInterface.java  RemoteControlHandler.java  RemoteControlInterface.java  RemoteControlState.java  State.java  XRMEException.java
libxrme/: CMakeLists.txt  common.cpp  common.h  connection.cpp  connection.h  handler.cpp  handler.h  mediaplayerhandler.cpp  mediaplayerhandler.h  mediaplayerinterface.cpp  mediaplayerinterface.h  remotecontrolhandler.cpp  remotecontrolhandler.h  remotecontrolinterface.cpp  remotecontrolinterface.h
test/: CMakeLists.txt  client.cpp  client.h  clientmainwindow.cpp  clientmainwindow.h  clientmainwindow.ui  main.cpp  server.cpp
